Controller - strategy and blocking queue taking added. View - main window and presenting.

--- a/system/sokoban-parent/sokoban-start/pom.xml
+++ b/system/sokoban-parent/sokoban-start/pom.xml
@@ -25,5 +25,9 @@
 			<artifactId>sokoban-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
 	</dependencies>
 </project>
