sokoban lib dependency in sokoban view

--- a/system/sokoban-parent/sokoban-view/pom.xml
+++ b/system/sokoban-parent/sokoban-view/pom.xml
@@ -10,4 +10,11 @@
 	</parent>
 	<artifactId>sokoban-view</artifactId>
 	<name>sokoban-view</name>
+	<dependencies>
+		<dependency>
+			<groupId>pl.edu.pw.elka.sokoban</groupId>
+			<artifactId>sokoban-lib</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 </project>
