--- a/system/sokoban-parent/sokoban-model/pom.xml
+++ b/system/sokoban-parent/sokoban-model/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>sokoban-lib</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 	
 </project>
