--- a/system/sokoban-parent/sokoban-start/pom.xml
+++ b/system/sokoban-parent/sokoban-start/pom.xml
@@ -30,4 +30,20 @@
 			<artifactId>log4j</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>pl.edu.pw.elka.sokoban.start.Start</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
